--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,11 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# files to ignore
+raw_data/
+.DS_Store
+longevity.Rproj
+longevity.html
+longevity_files/
+references.bib
